test/error/iface/err4.rzy
component
  Sub
    output
      funcA();
      funcB();
      
    implementation elementary
  end

  Err4
    implementation elementary
    
    component
      a : Sub;

    function a.funcA()
    end

    function a.funcB()
    end
    
    function a.funcC()
    end
    
  end

